update slides: google i/o 2014

--- a/slides/2014-07-09-google-io14-summary.html
+++ b/slides/2014-07-09-google-io14-summary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Google I/O 2014 Summary</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -171,6 +171,7 @@ Google I/O was started in 2008. The .red[I] and .red[O] stand for input/output, 
 * faster than MR
 * use pipeline
 * easy to use based on Google Cloud Platform
+* [http://googlecloudplatform.blogspot.com/2014/06/sneak-peek-google-cloud-dataflow-a-cloud-native-data-processing-service.html](http://googlecloudplatform.blogspot.com/2014/06/sneak-peek-google-cloud-dataflow-a-cloud-native-data-processing-service.html)
 
 ---
 
@@ -180,6 +181,24 @@ Google I/O was started in 2008. The .red[I] and .red[O] stand for input/output, 
 * aws, gcp, rackspace, openstack, cloudstack, etc
 * [http://www.scalr.com/](http://www.scalr.com/)
 * it is open-sourced: [https://github.com/Scalr/scalr](https://github.com/Scalr/scalr)
+
+---
+
+# Solve for X
+
+* https://www.solveforx.com/about/
+
+---
+
+# Solve for X
+
+Solve For X is a place to hear about and discuss radical technology ideas for solving global problems. Radical in the sense that the solutions could help millions or billions of people. Radical in the sense that the audacity of the proposals makes them sound like science fiction. And radical in the sense that there is some real technology breakthrough on the horizon indicating that these ideas could really be brought to life.
+
+---
+
+# Solve for X
+
+Solve For X is intended to be a forum to encourage and amplify technology-based moonshot thinking and teamwork. The forum began in 2012 with a small face-to-face event co-created and co-hosted by Astro Teller, Megan Smith, and Eric Schmidt. Watch videos of talks from that event here.
 
 ---
 
